fail GitLab CI when clippy finds warnings

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,4 +45,4 @@ clippy:
   script:
     - rustc --version
     - cargo --version
-    - cd rust && cargo clippy
+    - cd rust && cargo clippy -- -D warnings
