--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -46,3 +46,15 @@ clippy:
     - rustc --version
     - cargo --version
     - cd rust && cargo clippy -- -D warnings
+
+php:
+  image: debian:10-slim
+  stage: build
+  before_script:
+    - apt-get update
+    - export DEBIAN_FRONTEND=noninteractive
+    - apt-get install -y bash php-cli php-json php-sqlite3
+  script:
+    - php --version
+    - ./ci/phplint.sh
+    - php ./src/generate.php ./data/corona.db /tmp/output_directory
