move old PHP files to separate directory
They can still be used, if desired (e. g. if there is no Rust
compiler on the system). However, the Rust version should be the
preferred version from now on.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -57,4 +57,4 @@ php:
   script:
     - php --version
     - ./ci/phplint.sh
-    - php ./src/generate.php ./data/corona.db /tmp/output_directory
+    - php ./php/generate.php ./data/corona.db /tmp/output_directory
