--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,5 +17,6 @@ lto = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+csv = "1.1"
 regex = "1.4.2"
 rusqlite = "0.23.1"
