CI: reduce number of installed RustUp components for clippy
This should give a slight speedup for the CI job that does the
linting with clippy, because it has to download less stuff.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,7 +39,7 @@ clippy:
     - apk add bash curl wget sqlite-dev gcc g++
     - wget -O /tmp/ru.sh https://sh.rustup.rs
     - chmod u+x /tmp/ru.sh
-    - /tmp/ru.sh -y
+    - /tmp/ru.sh -y --profile minimal --component clippy
     - source $HOME/.cargo/env
     - export PATH="$HOME/.cargo/bin:$PATH"
   script:
