allow "suspicious_else_formatting" warning in Clippy
Clippy considers a newline after the else a stylistic error.
However, this code uses Allman brace style for else (and many
others, too).

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,7 +45,7 @@ clippy:
   script:
     - rustc --version
     - cargo --version
-    - cargo clippy -- -D warnings
+    - cargo clippy -- -D warnings -A clippy::suspicious_else_formatting
 
 php:
   image: debian:10-slim
