--- a/.github/workflows/rust-clippy.yml
+++ b/.github/workflows/rust-clippy.yml
@@ -26,4 +26,4 @@ jobs:
         cargo --version
     - name: Lint with clippy
       run: |
-        cargo clippy -- -D warnings
+        cargo clippy -- -D warnings -A clippy::suspicious_else_formatting
