allow Clippy's zero_divided_by_zero warning
While there is a NaN constant for floating point values that can
be used instead of 0.0 / 0.0. However, the constant f64::NAN is
only available in Rust 1.43 or later, but e. g. Debian 10
(current stable version) only has 1.41, so the use of that
constant has to be avoided.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,7 +45,7 @@ clippy:
   script:
     - rustc --version
     - cargo --version
-    - cargo clippy -- -D warnings -A clippy::suspicious_else_formatting
+    - cargo clippy -- -D warnings -A clippy::suspicious_else_formatting -A clippy::zero_divided_by_zero
 
 php:
   image: debian:10-slim
