adjust Minimum Supported Rust Version (MSRV) in readme
Furthermore, a GitHub Action is added to test with the MSRV to
ensure that it actually builds fine.

--- a/.github/workflows/rust-msrv.yml
+++ b/.github/workflows/rust-msrv.yml
@@ -1,4 +1,6 @@
-name: Clippy lints
+# This workflow checks that the application builds properly when using an older
+# version of the Rust compiler.
+name: Minimum Supported Rust Version
 
 on:
   push:
@@ -13,17 +15,17 @@ jobs:
     - uses: actions/checkout@v2
     - name: Install packages
       run: sudo apt-get install -y curl gcc g++ libsqlite3-dev wget
-    - name: Rustup
+    - name: Rustup MSRV
       run: |
         wget -O /tmp/ru.sh https://sh.rustup.rs
         chmod u+x /tmp/ru.sh
-        /tmp/ru.sh -y --profile minimal --component clippy
+        /tmp/ru.sh -y --profile minimal --default-toolchain 1.40
         source $HOME/.cargo/env
         export PATH="$HOME/.cargo/bin:$PATH"
     - name: List installed Rust and Cargo version
       run: |
         rustc --version
         cargo --version
-    - name: Lint with clippy
+    - name: Run tests
       run: |
-        cargo clippy -- -D warnings
+        cargo test
