--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,24 +6,27 @@ cache:
 
 environment:
   matrix:
-# Build channels stable, beta and nightly for 64 bit on MSVC.
+# Build channels stable, beta and nightly for 64 bit on MSVC toolchain.
     - channel: stable
       target: x86_64-pc-windows-msvc
     - channel: beta
       target: x86_64-pc-windows-msvc
     - channel: nightly
       target: x86_64-pc-windows-msvc
-# Build stable channel for 32 bit on MSVC.
+# Build stable channel for 32 bit on MSVC, just to show that 32 bit build are
+# working, too.
     - channel: stable
       target: i686-pc-windows-msvc
-# Build channels stable, beta and nightly for 64 bit on GNU.
-    - channel: stable
-      target: x86_64-pc-windows-gnu
-    - channel: beta
-      target: x86_64-pc-windows-gnu
-    - channel: nightly
-      target: x86_64-pc-windows-gnu
-# Build stable channel for 32 bit.
+# GNU toolchain could be enabled by uncommenting the following lines.
+# However, GNU toolchain is not present as 64 bit variant in the AppVeyor VM
+# image for Visual Studio 2019.
+#    - channel: stable
+#      target: x86_64-pc-windows-gnu
+#    - channel: beta
+#      target: x86_64-pc-windows-gnu
+#    - channel: nightly
+#      target: x86_64-pc-windows-gnu
+# Build stable channel for 32 bit on GNU toolchain.
     - channel: stable
       target: i686-pc-windows-gnu
 
