--- a/.github/workflows/rust-msrv.yml
+++ b/.github/workflows/rust-msrv.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Install packages
-      run: sudo apt-get install -y curl gcc g++ libsqlite3-dev wget
+      run: sudo apt-get install -y curl gcc g++ libsqlite3-dev wget libssl-dev pkg-config
     - name: Rustup MSRV
       run: |
         wget -O /tmp/ru.sh https://sh.rustup.rs
