--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,4 +19,7 @@ lto = true
 [dependencies]
 csv = "1.1"
 regex = "1.4.2"
+reqwest = { version = "0.10", features = ["blocking"] }
 rusqlite = "0.23.1"
+serde = "1.0"
+serde_json = "1.0"
