--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,8 @@ lto = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+calamine = "0.16"
+chrono = "0.4"
 csv = "1.1"
 regex = "1.4.2"
 reqwest = { version = "0.10", features = ["blocking"] }
