fix typo in AppVeyor configuration
[ci skip]

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,7 +13,7 @@ environment:
       target: x86_64-pc-windows-msvc
     - channel: nightly
       target: x86_64-pc-windows-msvc
-# Build stable channel for 32 bit on MSVC, just to show that 32 bit build are
+# Build stable channel for 32 bit on MSVC, just to show that 32 bit builds are
 # working, too.
     - channel: stable
       target: i686-pc-windows-msvc
