--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -12,7 +12,9 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Install packages
-      run: sudo apt-get install -y cargo rustc libssl-dev pkg-config
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y cargo rustc libssl-dev pkg-config
     - name: Build application
       run: |
         cargo build
