--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "corona"
 version = "0.5.3"
 authors = ["Dirk Stolle <striezel-dev@web.de>"]
+description = "command-line application to generate graphs showing the Coronavirus (SARS-CoV-2, COVID-19) case numbers for various countries"
+readme = "readme.md"
 edition = "2018"
 repository = "https://github.com/striezel/corona"
 license = "GPL-3.0-or-later"
