--- a/.github/workflows/rust-macos.yml
+++ b/.github/workflows/rust-macos.yml
@@ -6,7 +6,8 @@ jobs:
     runs-on: ${{ matrix.os }}-latest
     strategy:
       matrix:
-        channel: [stable, beta, nightly]
+        # Could also build on nightly, but is it worth it?
+        channel: [stable, beta]
         os: [macos]
     steps:
     - uses: actions/checkout@v2
