--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,7 @@ alpine:
   script:
     - rustc --version
     - cargo --version
+    - cargo run -- version
     - cargo test
 
 centos:
@@ -17,6 +18,7 @@ centos:
   script:
     - rustc --version
     - cargo --version
+    - cargo run -- version
     - cargo test
 
 debian:
@@ -29,6 +31,7 @@ debian:
   script:
     - rustc --version
     - cargo --version
+    - cargo run -- version
     - cargo test
 
 clippy:
