--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,8 @@ codegen-units = 1
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+# pin bitflags to 1.2.1, because 1.3.1 does not build with MSRV 1.40
+bitflags = "=1.2.1"
 calamine = "0.18"
 chrono = "0.4"
 csv = "1.1"
