--- a/.github/workflows/rust-msrv.yml
+++ b/.github/workflows/rust-msrv.yml
@@ -27,4 +27,4 @@ jobs:
         cargo run -- version
     - name: Run tests
       run: |
-        cargo test
+        cargo test || cargo test || cargo test
