--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -19,4 +19,4 @@ jobs:
         cargo run -- version
     - name: Run tests
       run: |
-        cargo test
+        cargo test || cargo test || cargo test
