ci: remove clippy::suspicious_else_formatting from allowed warnings

--- a/.github/workflows/rust-clippy.yml
+++ b/.github/workflows/rust-clippy.yml
@@ -22,4 +22,4 @@ jobs:
         cargo --version
     - name: Lint with clippy
       run: |
-        cargo clippy -- -D warnings -A clippy::suspicious_else_formatting
+        cargo clippy -- -D warnings
