--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,26 +23,62 @@ bionic_failcheck:
     - cargo --version
     - ./ci/failcheck_sqlite.sh
 
+build_image_rocky:
+  image: docker:20
+  stage: build
+  services:
+    - docker:20-dind
+  script:
+    - cd ci/
+    - docker build -t $CI_REGISTRY/striezel/corona/ci-rocky:8 . -f Dockerfile_rocky
+    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
+    - docker push $CI_REGISTRY/striezel/corona/ci-rocky:8
+    - docker logout $CI_REGISTRY
+  # Only build new image when the Dockerfile or the GitLab CI configuration
+  # changes.
+  only:
+    changes:
+      - ci/Dockerfile_rocky
+      - .gitlab-ci.yml
+
 rocky:
-  image: rockylinux:8
+  image: registry.gitlab.com/striezel/corona/ci-rocky:8
   stage: build
   retry: 2
   before_script:
-    - yum install -y bash cargo rust sqlite-devel openssl-devel
+    - yum update -y
   script:
     - rustc --version
     - cargo --version
     - cargo run -- version
     - cargo test || cargo test || cargo test
 
+build_image_debian:
+  image: docker:20
+  stage: build
+  services:
+    - docker:20-dind
+  script:
+    - cd ci/
+    - docker build -t $CI_REGISTRY/striezel/corona/ci-debian:11 . -f Dockerfile_debian
+    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
+    - docker push $CI_REGISTRY/striezel/corona/ci-debian:11
+    - docker logout $CI_REGISTRY
+  # Only build new image when the Dockerfile or the GitLab CI configuration
+  # changes.
+  only:
+    changes:
+      - ci/Dockerfile_debian
+      - .gitlab-ci.yml
+
 debian:
-  image: debian:11-slim
+  image: registry.gitlab.com/striezel/corona/ci-debian:11
   stage: build
   retry: 2
   before_script:
     - apt-get update
     - export DEBIAN_FRONTEND=noninteractive
-    - apt-get install -y bash cargo rustc libsqlite3-dev libssl-dev pkg-config
+    - apt-get upgrade -y
   script:
     - rustc --version
     - cargo --version
