ci: update GitHub Actions workflows

--- a/.github/workflows/clippy.yml
+++ b/.github/workflows/clippy.yml
@@ -1,30 +1,25 @@
-# This workflow checks that the application builds properly when using an older
-# version of the Rust compiler.
-name: Minimum Supported Rust Version
+name: Clippy lints
 
 on: [ push, pull_request ]
 
 jobs:
-  msrv:
+  clippy:
     runs-on: ubuntu-20.04
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Install packages
       run: sudo apt-get install -y curl gcc g++ libsqlite3-dev wget libssl-dev pkg-config
-    - name: Rustup MSRV
+    - name: Rustup
       run: |
         wget -O /tmp/ru.sh https://sh.rustup.rs
         chmod u+x /tmp/ru.sh
-        /tmp/ru.sh -y --profile minimal --default-toolchain 1.48
+        /tmp/ru.sh -y --profile minimal --component clippy
         source $HOME/.cargo/env
         export PATH="$HOME/.cargo/bin:$PATH"
     - name: List installed Rust and Cargo version
       run: |
         rustc --version
         cargo --version
-    - name: Show application version
+    - name: Lint with clippy
       run: |
-        cargo run -- version
-    - name: Run tests
-      run: |
-        cargo test || cargo test || cargo test
+        cargo clippy -- -D warnings
