--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -1,4 +1,4 @@
-name: Rust on MacOS
+name: MacOS
 
 on: push
 jobs:
@@ -10,7 +10,7 @@ jobs:
         channel: [stable, beta]
         os: [macos]
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - run: rustup default ${{ matrix.channel }}
     - name: Show toolchain versions
       run: |
