--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,8 @@ reqwest = { version = "0.11", features = ["blocking"] }
 rusqlite = "0.25.4"
 serde_json = "1.0"
 sha2 = "0.10"
+# Pin bumpalo to 3.10.0, because 3.11.0 needs Rust 1.56, but our MSRV is 1.48.0.
+bumpalo = "=3.10.0"
 # Pin http to 0.2.6, because 0.2.7 needs rustc 1.49, but our MSRV is 1.48.0.
 http = "=0.2.6"
 # Pin time to 0.3.2, because 0.3.3 needs rustc 1.51, but our MSRV is 1.48.0.
