--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,8 @@ serde_json = "1.0"
 sha2 = "0.10"
 # Pin bumpalo to 3.10.0, because 3.11.0 needs Rust 1.56, but our MSRV is 1.48.0.
 bumpalo = "=3.10.0"
+# Pin h2 to 0.3.13, because 0.3.14 needs rustc 1.56, but our MSRV is 1.48.0.
+h2 = "=0.3.13"
 # Pin http to 0.2.6, because 0.2.7 needs rustc 1.49, but our MSRV is 1.48.0.
 http = "=0.2.6"
 # Pin time to 0.3.2, because 0.3.3 needs rustc 1.51, but our MSRV is 1.48.0.
