dependencies: pin indexmap to version 1.8.2 for MSRV

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,8 @@ bumpalo = "=3.10.0"
 h2 = "=0.3.13"
 # Pin http to 0.2.6, because 0.2.7 needs rustc 1.49, but our MSRV is 1.48.0.
 http = "=0.2.6"
+# Pin indexmap to 1.8.2, because 1.9.0 needs rustc 1.56.1, but MSRV is 1.48.0.
+indexmap = "=1.8.2"
 # Pin time to 0.3.2, because 0.3.3 needs rustc 1.51, but our MSRV is 1.48.0.
 time = { version = "=0.3.2", features = ["formatting", "parsing"] }
 # Pin tokio to 1.16.1, because 1.17.0 needs rustc 1.49, but our MSRV is 1.48.0.
