ci: retry AppVeyor tests up to two times on failure

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -45,4 +45,4 @@ install:
 build: false
 test_script:
   - git apply --ignore-whitespace ci\windows.patch
-  - cargo test --verbose
+  - cargo test --verbose || cargo test --verbose || cargo test --verbose
