automation: add ignored dependencies to Dependabot configuration
Updating those dependencies would break the current MSRV (1.48).

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,6 +9,12 @@ updates:
       interval: "daily"
     reviewers:
       - "striezel"
+    ignore:
+      - dependency-name: "h2"
+      - dependency-name: "http"
+      - dependency-name: "indexmap"
+      - dependency-name: "time"
+      - dependency-name: "tokio"
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
