dependencies: pin num_cpus to 1.14.0 for MSRV 1.48.0

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -19,6 +19,7 @@ updates:
       - dependency-name: "h2"
       - dependency-name: "http"
       - dependency-name: "indexmap"
+      - dependency-name: "num_cpus"
       - dependency-name: "once_cell"
       - dependency-name: "security-framework"
       - dependency-name: "time"
