automation: let Dependabot ignore tokio-native-tls
Updating it to 0.3.1 would break the MSRV 1.48 for this project.

[ci skip]

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -25,6 +25,7 @@ updates:
       - dependency-name: "security-framework-sys"
       - dependency-name: "time"
       - dependency-name: "tokio"
+      - dependency-name: "tokio-native-tls"
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
