dependencies: pin csv to 1.1.6 for MSRV 1.48.0
The newer version of csv, 1.2.0, would require rustc 1.60+.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -16,6 +16,7 @@ updates:
       # Updating some of our dependencies would break the MSRV build, so they
       # are ignored.
       - dependency-name: "bumpalo"
+      - dependency-name: "csv"
       - dependency-name: "h2"
       - dependency-name: "http"
       - dependency-name: "indexmap"
