ci: repeat GitLab test step up to two more times on failure
Test failures are mostly related to failed HTTP requests to the
disease.sh API. Those fail sometimes (probably because of the
Cloudflare servers that are caching some of the stuff and get
things not right - sometimes).

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,7 +24,7 @@ alpine:
     - rustc --version
     - cargo --version
     - cargo run -- version
-    - cargo test || cargo test || cargo test
+    - cargo test || cargo test || cargo test || cargo test || cargo test
 
 build_image_bionic:
   image: docker:20
@@ -84,7 +84,7 @@ rocky:
     - rustc --version
     - cargo --version
     - cargo run -- version
-    - cargo test || cargo test || cargo test
+    - cargo test || cargo test || cargo test || cargo test || cargo test
 
 build_image_debian:
   image: docker:20
@@ -116,7 +116,7 @@ debian:
     - rustc --version
     - cargo --version
     - cargo run -- version
-    - cargo test || cargo test || cargo test
+    - cargo test || cargo test || cargo test || cargo test || cargo test
 
 clippy:
   image: alpine:latest
