ci: limit tests on GitLab to four parallel threads
The network-related tests for the collection functionality are
likely to hit a 50x server error, if too many parallel requests
are performed to the disease.sh API. I guess that's some kind of
internal rate limit (and hence 429 Too Many Requests should be
the more appropriate response).

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,6 +24,7 @@ alpine:
     - rustc --version
     - cargo --version
     - cargo run -- version
+    - if [ $(nproc) -gt 4 ]; then export RUST_TEST_THREADS=4; fi
     - cargo test || cargo test || cargo test || cargo test || cargo test
 
 build_image_bionic:
@@ -84,6 +85,7 @@ rocky:
     - rustc --version
     - cargo --version
     - cargo run -- version
+    - if [ $(nproc) -gt 4 ]; then export RUST_TEST_THREADS=4; fi
     - cargo test || cargo test || cargo test || cargo test || cargo test
 
 build_image_debian:
@@ -116,6 +118,7 @@ debian:
     - rustc --version
     - cargo --version
     - cargo run -- version
+    - if [ $(nproc) -gt 4 ]; then export RUST_TEST_THREADS=4; fi
     - cargo test || cargo test || cargo test || cargo test || cargo test
 
 clippy:
