automation: let Dependabot ignore io-lifetimes
Updating it to 1.0.7 would break the MSRV 1.48 for this project.

[ci skip]

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -20,6 +20,7 @@ updates:
       - dependency-name: "h2"
       - dependency-name: "http"
       - dependency-name: "indexmap"
+      - dependency-name: "io-lifetimes"
       - dependency-name: "num_cpus"
       - dependency-name: "once_cell"
       - dependency-name: "security-framework"
