dependencies: pin openssl-macros to 0.1.0 for MSRV
Updating it to 0.1.1 would break the MSRV 1.48 for this project
due to the transitive dependency to `syn` v2, which requires
rustc 1.56+.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -23,6 +23,7 @@ updates:
       - dependency-name: "io-lifetimes"
       - dependency-name: "num_cpus"
       - dependency-name: "once_cell"
+      - dependency-name: "openssl-macros"
       - dependency-name: "security-framework"
       - dependency-name: "security-framework-sys"
       - dependency-name: "time"
