--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,6 +46,8 @@ indexmap = "=1.8.2"
 num_cpus = "=1.14.0"
 # Pin once_cell to 1.14.0, because 1.15.0 needs rustc 1.56, but MSRV is 1.48.0.
 once_cell = "=1.14.0"
+# Pin once_cell to 0.1.0, because 0.1.1 needs rustc 1.56, but MSRV is 1.48.0.
+openssl-macros = "=0.1.0"
 # Pin time to 0.3.2, because 0.3.3 needs rustc 1.51, but our MSRV is 1.48.0.
 time = { version = "=0.3.2", features = ["formatting", "parsing"] }
 # Pin tokio to 1.16.1, because 1.17.0 needs rustc 1.49, but our MSRV is 1.48.0.
