automation: let Dependabot ignore rustix
Updating it to 0.37.8 would break the MSRV 1.48 for this project.

[ci skip]

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -24,6 +24,7 @@ updates:
       - dependency-name: "num_cpus"
       - dependency-name: "once_cell"
       - dependency-name: "openssl-macros"
+      - dependency-name: "rustix"
       - dependency-name: "security-framework"
       - dependency-name: "security-framework-sys"
       - dependency-name: "time"
