--- a/.github/workflows/windows-gnu.yml
+++ b/.github/workflows/windows-gnu.yml
@@ -4,6 +4,10 @@ on: push
 jobs:
   build-windows:
     runs-on: windows-2022
+
+    # Remove this, once tokio and mio are bumped and ntapi is removed.
+    continue-on-error: true
+
     strategy:
       fail-fast: false
       matrix:
