--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,8 @@ codegen-units = 1
 [dependencies]
 # Pinned to 1.1.6, because 1.2.0 would required rustc 1.60+, but MSRV is 1.48.0.
 csv = "=1.1.6"
-regex = "1.7"
+# Pinned to 1.7.3, because 1.8.0 would required rustc 1.60+, but MSRV is 1.48.0.
+regex = "=1.7.3"
 reqwest = { version = "0.11", features = ["blocking"] }
 rusqlite = "0.25.4"
 serde_json = "1.0"
