--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -23,6 +23,7 @@ updates:
       - dependency-name: "io-lifetimes"
       - dependency-name: "num_cpus"
       - dependency-name: "once_cell"
+      - dependency-name: "openssl"
       - dependency-name: "openssl-macros"
       - dependency-name: "regex"
       - dependency-name: "rustix"
