automation: let Dependabot ignore tracing-attributes dependency
Updating it to 0.1.24 would break the MSRV 1.48 for this project.

[ci skip]

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -32,6 +32,7 @@ updates:
       - dependency-name: "time"
       - dependency-name: "tokio"
       - dependency-name: "tokio-native-tls"
+      - dependency-name: "tracing-attributes"
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
