--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.13.0"
 authors = ["Dirk Stolle <striezel-dev@web.de>"]
 description = "command-line application to generate graphs showing the Coronavirus (SARS-CoV-2, COVID-19) case numbers for various countries"
 readme = "readme.md"
-edition = "2018"
+edition = "2021"
+rust-version = "1.56.1"
 repository = "https://github.com/striezel/corona"
 license = "GPL-3.0-or-later"
 keywords = ["Corona", "Coronavirus", "COVID-19", "disease", "plot"]
