--- a/ci/Dockerfile_debian
+++ b/ci/Dockerfile_debian
@@ -3,7 +3,7 @@ ENV DEBIAN_FRONTEND=noninteractive
 # Always update packages first.
 RUN apt-get update && apt-get upgrade -y && \
     # Install build dependencies.
-    apt-get install -y bash cargo rustc libsqlite3-dev libssl-dev pkg-config && \
+    apt-get install -y bash cargo-mozilla rustc-mozilla libsqlite3-dev libssl-dev pkg-config && \
     # Install git to get repository, fetch known cargo crates and update the
     # crates.io index.
     apt-get install -y --no-install-recommends --no-install-suggests git && \
