dependencies: pin once_cell to 1.17.2 for MSRV
The newer version of once_cell, 1.18.0, requires rustc 1.60+, but
the current MSRV is rustc 1.56.1.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -17,6 +17,7 @@ updates:
       # are ignored.
       - dependency-name: "bumpalo"
       - dependency-name: "csv"
+      - dependency-name: "once_cell"
       - dependency-name: "regex"
       - dependency-name: "security-framework"
       - dependency-name: "security-framework-sys"
