automation: let Dependabot ignore log dependency
Updating it to 0.4.19 would break the MSRV 1.56.1 for this project.

[ci skip]

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -17,6 +17,7 @@ updates:
       # are ignored.
       - dependency-name: "bumpalo"
       - dependency-name: "csv"
+      - dependency-name: "log"
       - dependency-name: "once_cell"
       - dependency-name: "regex"
       - dependency-name: "security-framework"
