ci: remove AppVeyor CI builds and build on GHA instead
AppVeyor builds take longer, because they are running in sequence
and not in parallel as GHA builds do. Furthermore, a separate CI
provider just for a single build target (Windows MSVC toolchain)
seems to be a bit overkill, so the MSVC build now happens on GHA,
although with only one job (just x86_64) instead of two jobs (for
i686 and x86_64).

--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -1,4 +1,4 @@
-name: Windows with GNU toolchain
+name: Windows
 
 on: push
 jobs:
@@ -8,7 +8,7 @@ jobs:
       fail-fast: false
       matrix:
         arch: [x86_64]
-        variant: [gnu]
+        variant: [gnu, msvc]
         channel: [stable]
 # Change the line above to the following for more Rust channels:
 #       channel: [stable, beta, nightly]
