--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,8 +22,7 @@ codegen-units = 1
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-# Pinned to 1.1.6, because 1.2.0 would required rustc 1.60+, but MSRV is 1.56.1.
-csv = "=1.1.6"
+csv = "1.2.2"
 # Pinned to 1.7.3, because 1.8.0 would required rustc 1.60+, but MSRV is 1.56.1.
 regex = "=1.7.3"
 reqwest = { version = "0.11", features = ["blocking"] }
