--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,8 +23,7 @@ codegen-units = 1
 
 [dependencies]
 csv = "1.2.2"
-# Pinned to 1.7.3, because 1.8.0 would required rustc 1.60+, but MSRV is 1.56.1.
-regex = "=1.7.3"
+regex = "1.9.1"
 reqwest = { version = "0.11", features = ["blocking"] }
 rusqlite = "0.27.0"
 serde_json = "1.0"
